# wikid

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.beads/hooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  release.yml
.hooks/: pre-commit
crates/wikid/: Cargo.toml
crates/wikid-core/: Cargo.toml
crates/wikid-core/src/: callouts.rs  doctor.rs  error.rs  frontmatter.rs  lib.rs  links.rs  markdown.rs  obsidian_config.rs  ops.rs  paths.rs  status.rs  tags.rs  test_fixtures.rs  vault.rs
crates/wikid-server/: Cargo.toml
crates/wikid-server/src/: app.rs  config.rs  error.rs  lib.rs
crates/wikid/src/: error.rs  main.rs  remote.rs  render.rs  skills.rs  update.rs
crates/wikid/tests/: local_mode.rs  remote_mode.rs
docs/: DESIGN.md  SPEC.md  SPEC_v0.1_original.md  wikid.example.toml
docs/tasks/: full-obsidian-format-support.md
examples/llm-wiki/: index.md  log.md
examples/llm-wiki/concepts/: compiled-wiki.md  compounding-knowledge.md  raw-sources.md  schema.md
examples/llm-wiki/questions/: example-queries.md
examples/llm-wiki/raw/: source-queue.md
examples/llm-wiki/workflow/: ingest.md  lint.md  query.md
skills/core/: SKILL.md
skills/core/references/: doctor-checks.md  json-shapes.md  link-resolution.md
skills/llm-wiki/: SKILL.md
thoughts/research/: okf-compatibility.md
