[workspace]
resolver = "3"
members = ["crates/wikid-core", "crates/wikid-server", "crates/wikid"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ihorkatkov/wikid"

[workspace.dependencies]
wikid-core = { path = "crates/wikid-core" }
wikid-server = { path = "crates/wikid-server" }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
regex = "1"
sha2 = "0.10"
globset = "0.4"
ignore = "0.4"
tempfile = "3"
humantime = "2"
ureq = { version = "2", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
assert_cmd = "2"
predicates = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
lto = true
strip = true
codegen-units = 1
