[package]
name = "wikid-core"
description = "Vault model, link graph, file operations, and health checks for wikid"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true
regex.workspace = true
sha2.workspace = true
globset.workspace = true
ignore.workspace = true
tempfile.workspace = true
humantime.workspace = true

[dev-dependencies]
serde_json.workspace = true
