[package]
name = "wikid"
description = "A wicked-simple daemon that exposes plain-Markdown wikis to remote agents over CLI and MCP"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "wikid"
path = "src/main.rs"

[[bin]]
name = "boxd-worktree"
path = "src/bin/boxd-worktree.rs"

[dependencies]
wikid-core.workspace = true
wikid-server.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
ureq.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
